--- a/.github/workflows/lint-plugin.yml
+++ b/.github/workflows/lint-plugin.yml
@@ -20,4 +20,4 @@ jobs:
         uses: golangci/golangci-lint-action@v3
         with:
           version: v1.45.2
-          working-directory: mattermost-plugin
+          working-directory: mattermost-plugin/server
