--- a/.github/workflows/lint-plugin.yml
+++ b/.github/workflows/lint-plugin.yml
@@ -16,8 +16,7 @@ jobs:
         with:
           go-version: 1.18.1
       - uses: actions/checkout@v3
-      - name: plugin-lint
-        uses: golangci/golangci-lint-action@v3
-        with:
-          version: v1.45.2
-          working-directory: mattermost-plugin/server
+      - name: set up golangci-lint
+        run: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.45.2
+      - name: lint
+        run: make server-lint
